Current

Highlights of this release:

- FreeRTOS
	- Uart driver: SW flow control support has been added with GPIOs

- PulpOS
	- Uart driver: SW flow control support has been added with GPIOs

Bug fixes:

- PulpOS
	- FC stack was not aligned on 8 bytes, leading to issues with printf with floats.
	- Compilation on gap8 v2 and v3 were done with v1 config
	- "make flash" is now flashing binary and FS to flash

3.3

Highlights of this release:

- Autotiler:
	- Generators api changed, now the fixed point format is passed when generating the code:
		In_Q: In fixed point format
		Filter_Q: Filter fixed point format
		Bias_Q: Bias fixed point format
		Out_Q: Out fixed point format
		For CNN_ConvolutionPoolReLU:
		bias norm si calcualted as Filter_Q+In_Q-Bias_Q
		while output adjust is calculated as Filter_Q+In_Q-Out_Q
		for multiplicative bias you can see formula in generators.
	- Added swish activation
	- Added relu6 activation
	- Added leaky relu activation
	- Added sigmoid activation
	- Lots of bug fixing

- NNTool
	- Support for new autotiler generators and new activations.
	- Support for mul scaling.

3.2.2

Bug fixes:

- Proper closing of bluetooth module, and few instabilities.

3.1

Highlights of this release:

- OpenOCD:
	- Added OpenOCD porting for GAP8.
	- Applications can be loaded and started or uploaded to flash through JTAG.
	- Printf and file IOs with the workstation are available with semi-hosting.
- PMSIS
	- Added I2S driver.
	- Added PWM driver.
- BSP:
	- Read FS can now be mapped to the workstation using semi-hosting.
	- Added driver for Lynred Thermeye thermal detector.
- GVSOC:
	- Added support for OpenOCD semi-hosting, to support printf and file IOs from workstation.
- Applications
	- Added JPEG encoder example.
- Toolchain
	- Now available precompiled for Ubuntu18
